--- a/template.tex
+++ b/template.tex
@@ -114,10 +114,9 @@ grestore
 \begin{abstract}
 We present a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
 Our method accurately localizes the trajectory of a flexible needle to which a spherical marker is attached at a known distance from the tip with respect to a baseline scan of patient in the CT scanner coordinate frame. 
-This is achieved with lower dose compared to a full scan using sparse view angle sampling and without reconstructing the CT image of the repeat scan.
-Our method takes advantage of rigid registration to the baseline scan computed from the sparse projection data to calculate projection difference images, in which the needle and attached spherical marker are prominent features, allowing the needle trajectory to be traced in 3D space from its 2D projections.
-We performed registration and needle trajectory localization in seven abdomen phantom scans using two kinds of flexible needles, and obtained an average of 2.4 $\pm$ 0.9 mm tip localization error.
-The dose reduction enables more frequent needle trajectory localizations during needle insertion for a similar total dose, or a reduced total dose for the same frequency of localization.
+The localization is achieved with a significantly lower dose compared to a full scan using sparse view angle sampling and without reconstructing the CT image of the repeat scan.
+Our method starts by performing rigid registration between the patient and the baseline scan in Radon space computed from the sparse projection data.  It then computes projection difference images in which the needle and the spherical marker appear as prominent features. Their 3D spatial locations are then automatically extracted from these 2D projection images to trace the needle trajectory. To validate our method, we conducted registration and needle trajectory localization experiments in seven abdomen phantom scans using two types of flexible needles. Our experimental results yield a mean needle trajectory localization error of 0.7 $\pm$ 0.2mm and a mean
+tip localization error of 2.4 $\pm$ 0.9 mm with a x7.5 radiation dose reduction with respect to a full scan. The dose reduction enables more frequent needle trajectory localization during the needle insertion for a similar total dose, or a reduced total dose for the same localization frequency.
 \keywords{
 interventional CT \and 
 fractional CT scanning \and 
@@ -130,69 +129,66 @@ Radon space registration
 \section{Introduction}
 
 Image guided minimally invasive techniques have become commonplace for interventional procedures such as biopsies and aspirations.
-In these procedures a flexible needle is inserted under image guidance toward a target, either manually or using robotic actuators. Repeated imaging is acquired during insertion in order to verify the needle is advancing in the desired direction, as errors in needle placement can lead to wrong diagnosis or failed treatment.
+In these procedures, a flexible needle is inserted under image guidance towards a target, either manually or using robotic actuators. Repeated imaging is required during insertion to ensure that the needle is advancing in the desired direction and to correct the insertion path as required. Localization errors of a few millimeters in the needle insertion trajectory and its final placement can lead to misdiagnosis, repeated insertion attempts, and failed treatment.
 
-CT guidance is often used in interventional radiology procedures.
-While providing high resolution volumetric imaging of the patient, CT-guided interventions also carry several limitations and drawbacks.
-The intervention protocol typically requires the needle to be aligned with the axial plane of imaging as it is being inserted \cite{gupta2014ct}, which requires careful positioning of the patient to allow access to the target.
-Additionally, the presence of the needle in the scanned volume introduces image artifacts, due to beam hardening and scatter \cite{boas2012ctartifacts}, which can obscure important anatomical structures near the needle tip.
-And finally, the patient's cumulative exposure to ionizing X-ray radiation may increase the risk of cancer \cite{mettler2000ct, chodick2007excess}, which is exacerbated in interventional CT due to the number of repeat scans acquired during the procedure.
+CT guidance is often used in interventional radiology procedures to help the surgeon guide the needle towards the desired target. CT imaging is unique in that it provides real-time high resolution axial in-plane and volumetric images of the patient and the needle. However,
+CT-guided interventions has several limitations and drawbacks.
+The intervention protocol typically requires the needle to be aligned with the axial plane of imaging as it is being inserted \cite{gupta2014ct}, which requires careful positioning of the patient to allow access to the target. In addition, the presence of the needle in the scanned volume introduces imaging artifacts caused by beam hardening and scatter \cite{boas2012ctartifacts}, which can obscure important anatomical structures near the needle tip. Finally, the patient's cumulative exposure to ionizing X-ray radiation may increase the risk of cancer \cite{mettler2000ct, chodick2007excess}, which is exacerbated in interventional CT due to the number of repeat scans acquired during the procedure.
 
-Other imaging modalities used for interventional procedures include ultrasound, fluoroscopy and cone-beam CT.
-Ultrasound is a cost effective imaging solution, often providing only 2D cross sections at limited resolution and signal-to-noise ratio (SNR) \cite{sheafor2000comparison}, though 3D/4D Ultrasound have become available in recent decades.
-Fluoroscopy offers improved spatial resolution, but is not suitable when complex anatomical relationships must be characterized in 3D during the intervention.
-Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. Though it suffered from longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}, recent advances have reduced scan times to 5-20 seconds, comparable to MDCT \cite{dynact}.
+Other imaging modalities used for interventional procedures include ultrasound, X-ray fluoroscopy and cone-beam CT.
+Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D Ultrasound imaging is becoming more available in recent years, 
+its use si still limited in clinical practice.
+X-ray fluoroscopy offers improved spatial resolution, but is not suitable for procedures that require axial views or when complex anatomical relationships must be characterized in 3D during the intervention.
+Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. However it has longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}. Recent advances have reduced scan times to 5-20 seconds, with a x2-3 radiation dose reduction \cite{dynact}.
 
-Dose reduction techniques for CT mainly focus on achieving a good quality of reconstruction within the context of a single acquisition by scanning with lower tube current, resulting in lowered SNR, which is overcome by denoising \cite{manduca2009projection} or using statistical noise models in the reconstruction of the image \cite{zhang2016statistical,kim2015sparseview,niu2014sparse,liu2014total}. 
+Dose reduction techniques for CT mainly focus on achieving a good quality of reconstruction for a single, standalone scan acquisition. The most common radiation dose reduction technique is scanning with a lower tube current. This lowers the scanning SNR, which results in noise, lowered imaging contrast and resolution, and  introduces artifacts. Several methods have been developed to address these problems, including image denoising \cite{manduca2009projection} and image reconstruction with statistical noise models  \cite{zhang2016statistical,kim2015sparseview,niu2014sparse,liu2014total}. The radiation dose is typically x2-3 times that of a full scan. 
 
-However, in the common cases where a full baseline scan (without the needle) is available, a different approach can be used:
-selective acquisition of a sparse set of projection views, referred to as fractional scanning, enables reducing the radiation dose by modulating the current to the source of X-rays during its rotation. By exploiting the projection space raw data, registration with the baseline scan and localization of the needle in the repeat scan can be achieved without reconstruction of the repeat scan image \cite{medan2017sparse, medan2017reduced}.
+We have recently introduced a novel approach to CT radiation dose reduction in situations in which a full baseline CT scan is available, as is usually the case in interventional CT procedures \cite{medan2017sparse, medan2017reduced}. In our approach, subsequent full dose scanning is replaced by fractional scanning, which consists of the selective acquisition of a sparse set of projection views. Fractional scanning reduces the radiation dose by modulating the current to the source of X-rays during its rotation. By exploiting the projection space raw data, registration with the baseline scan and localization of the needle in the repeat scan can be achieved without reconstruction of the repeat scan image. This technique yields a x9-20 radiation dose reduction.
 
 %Dose reduction for physician
-The reduction of dose has implications for medical staff as well as patients, since the time spent by physicians, nurses and technologists throughout their careers in the intervention suite necessarily involves exposure to ionizing radiation. While protection equipment is used by medical professionals, the cumulative exposure is linked to an increased risk of cataracts and cancer \cite{miller2010occupational, sarti2012low}. In interventional CT, it is important to develop methods allowing dose reduction for slightly different concerns, such as excessive dose to the radiologist's hands \cite{stoeckelhuber2005radiation}.
+The reduction of dose has implications for medical staff as well as patients, since the time spent by physicians, nurses and technologists throughout their careers in the intervention suite necessarily involves exposure to ionizing radiation. While protection equipment is used by medical professionals, the cumulative exposure has been linked to an increased risk of cataracts and cancer \cite{miller2010occupational, sarti2012low}. In interventional CT, it is important to develop methods allowing dose reduction for slightly different concerns, such as excessive dose to the radiologist's hands \cite{stoeckelhuber2005radiation}.
 
 \section{Previous work}
-Different methods have been proposed to achieve accurate needle insertion by robotic actuators, with work focused on mechanical modelling of the system, environment and trajectory planning, but with little attention to needle localization from imaging modalities as feedback.
-Works by Wu et al. \cite{wu2013automatic} and Engh et al. \cite{engh2010percutaneous} describe implementations of a bevel-tip needle steering method using duty-cycle spinning of the needle, relying on its bending tendency due to asymmetry. Such systems model the needle-tissue interaction to execute a control sequence achieving a pre-planned trajectory. Imaging-based feedback is mentioned as a means to allow corrections of the control sequence mid-insertion by adjusting the planned trajectory based on the actual needle trajectory.
-Ben-David et al. \cite{ben2018robotic} describe a robotic system for flexible needle insertion under CT guidance. A dual guiding mechanism is composed of a driver which advances the needle while a positioning unit steers it during insertion. A pre-planned 3D trajectory is executed and amended during the insertion based on full repeated CT scans.
-Earlier work by Glozman et al. \cite{glozman2007image} describes robotic flexible needle steering and a needle-tissue mechanical interaction model, where feedback is based on 2D in-plane imaging of the needle.
+Various methods have been recently developed to achieve accurate needle insertion by robotic actuators. These works focus on the mechanical modelling of the robotic system, the patient anatomy, and the needle trajectory planning, with less attention to needle localization from imaging modalities.
+Wu et al. \cite{wu2013automatic} and Engh et al. \cite{engh2010percutaneous} describe implementations of a bevel-tip needle steering method using duty-cycle spinning of the needle that relies on the needle bending tendency due to asymmetry. Such systems model the needle-tissue interaction to execute a control sequence to follow a pre-planned trajectory. Image-based feedback is mentioned as a means to allow corrections of the control sequence mid-insertion by adjusting the planned trajectory based on the actual needle trajectory.
+Ben-David et al. \cite{ben2018robotic} describe a robotic system for flexible needle insertion under CT guidance. A dual guiding mechanism is composed of a driver that advances the needle while a positioning unit steers it during the insertion. A pre-planned 3D trajectory is executed and corrected during the insertion based on full repeated CT scans.
+Earlier work by Glozman et al. \cite{glozman2007image} describes robotic flexible needle steering and a needle-tissue mechanical interaction model. The steering feedback is based on 2D in-plane imaging of the needle.
 
-Most works in needle localization from medical images use ultrasound as the imaging modality. A robotically positioned 2D transducer perpendicular to the needle tip is presented in Vrooijink et al. \cite{vrooijink2013real}, where needle-induced image artifacts are taken advantage of in order to localize the needle tip in the imaged plane, while the transducer is continuously re-positioned to maintain its orientation relative to the needle tip. An approach combining both ultrasound and CT fluoroscopy is presented in \cite{marinetto2017integration}, where a free-hand ultrasound probe and C-arm are registered using an external optical tracker to produce a fused image in which the needle can be tracked.
+Most works in needle localization from medical images use ultrasound as the imaging modality. A robotically positioned 2D transducer perpendicular to the needle tip is presented in Vrooijink et al. \cite{vrooijink2013real}. In this system, needle-induced image artifacts are used to localize the needle tip in the imaged plane. The ultrasound transducer is continuously re-positioned to maintain its orientation relative to the needle tip. An approach combining both ultrasound and CT fluoroscopy is presented in \cite{marinetto2017integration}. In this approach, a free-hand ultrasound probe and a fluroscopic C-arm are registered using an external optical tracker to produce a fused image in which the needle can be tracked.
 
-The following works describe specific methods to localize the needle trajectory in reconstructed CT images:
-In previous work by the authors \cite{medan2017reduced}, localization of a straight rigid needle is addressed. The needle path is found by an intersection of planes in 3D space calculated from 2D projection images.
+Several works describe specific methods to localize the needle trajectory in reconstructed CT images. 
+In previous work by the authors \cite{medan2017reduced}, localization of a straight rigid needle is addressed. The needle path is found by an intersection of planes in 3D space computed from 2D projection images. 
 Hou et al. \cite{huo2015shape} reconstruct the bevel-tip flexible needle trajectory from full CT slices by localizing points at which the needle intersects slice planes, and fitting a fourth-order polynomial to the collection of 3D points.
-Yaniv et al. \cite{yaniv2010needle} describe a system in which embedded electromagnetic fiducials are used for needle tracking under CT guidance, with operator input required to identify the needle tip in a full CT scan taken in-situ. These methods rely on acquisition of full repeat scan and reconstruction of the image for each localization of the needle. This approach carries the associated cost in radiation dose for the patient. In the following section, we present a novel method for flexible needle localization in projection space using fractional scanning, without volume image reconstruction of the repeat scan, which promises to reduce the radiation dose associated with each needle localization.
-\cite{medan2017reduced}
+Yaniv et al. \cite{yaniv2010needle} describe a system in which embedded electromagnetic fiducials are used for needle tracking under CT guidance. Operator input is required to identify the needle tip in a full CT scan taken in-situ. These methods rely on the acquisition of a full repeat CT scan and on the reconstruction of the image for each localization of the needle. This approach carries the associated cost in radiation dose for the patient. 
 
-In a different clinical application, Cong et al.  \cite{cong2015quantitative} show the 3D structure of coronary arteries can be reconstructed from few views of X-ray angiography using forward projection of an evolving parametric 3D model into 2D views, updating the model based on the projection images.
+In a different clinical application, Cong et al.  \cite{cong2015quantitative} show that the 3D structure of coronary arteries can be reconstructed from a few X-ray angiography views using forward projection of an evolving parametric 3D model into 2D projections and updating the model based on the projection images. This method may be applicable to track the location of a needle and patient anatomy, although it has not been tried yet. 
 
 \section{Method}
 
-We describe next a method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning. We begin by computing a sinogram-space rigid registration of the patient position in the CT scanner coordinate frame between a baseline scan without a needle, and a repeat scan with a needle introduced. The repeat scan is performed by sampling sparsely in the view angle domain (fractional scanning) and without reconstructing the CT image, while the baseline scan is assumed to be a full scan (sampled densely in the view angle domain). We use projection difference images (shown in Fig. \ref{proj_diff_fig}), which are calculated by subtracting registered reprojected baseline scan images from the sparse set of repeat projection images. These highlight the differences between scans, which in our case is assumed to be the needle. The needle trajectory is then traced in 3D space using only the projection difference images. The stages of our method are outlined below:
+We describe next a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning. We begin by computing a sinogram-space rigid registration of the patient position in the CT scanner coordinate frame between a baseline scan without a needle, and a repeat scan with a needle introduced. The repeat scan is performed by sampling sparsely in the view angle domain (fractional scanning) and without reconstructing the CT image, while the baseline scan is assumed to be a full scan (sampled densely in the view angle domain). We use projection difference images (shown in Fig. \ref{proj_diff_fig}), which are calculated by subtracting registered reprojected baseline scan images from the sparse set of repeat projection images. These highlight the differences between scans, which in our case is assumed to be the needle. The needle trajectory is then traced in 3D space using only the projection difference images. The stages of our method are:
 \begin{enumerate}
 \item \textit{Fractional scanning}. A fractional repeat scan is obtained with the needle in place. The full baseline scan and fractional repeat scan are registered using our sinogram space rigid registration method \cite{medan2017sparse}.
-\item \textit{Projection difference}. Using the obtained rigid registration, the projection difference images are calculated by applying the rigid transformation to the baseline scan volume, forward projection, and subtracting from corresponding repeat scan projection images. The images are then post-processed by calculating the gradient intensity image and normalizing by the local mean gradient intensity value, to obtain an image in which the features of the projection difference have intensities on the same order of magnitude.
-\item \textit{Spherical marker localization}. we obtain a 3D localization of a spherical marker attached to the needle at a known distance from the tip, using the projection difference images.
-\item \textit{Incremental needle trajectory tracing}. starting from the center of the marker obtained in the previous stage, we incrementally trace the needle trajectory in 3D space using the projection difference images.
-\item \textit{Display/feedback}. the current location of the needle with respect to the baseline scan 3D image is displayed and/or used as feedback for further driving the needle toward the target.
+\item \textit{Projection difference}. Using the obtained rigid registration, the projection difference images are computed by applying the rigid transformation to the baseline scan volume, forward projection, and subtracting from corresponding repeat scan projection images. The images are then post-processed by computing the gradient intensity image and normalizing by the local mean gradient intensity value, to obtain an image in which the features of the projection difference have intensities on the same order of magnitude.
+\item \textit{Spherical marker localization}. The 3D localization of the spherical marker attached to the needle at a known distance from the tip is computed using the projection difference images.
+\item \textit{Incremental needle trajectory tracing}. The needle trajectory is incrementally computed in 3D space using the projection difference images, starting from the center of the marker obtained in the previous stage. 
+\item \textit{Display/feedback}. The current location of the needle with respect to the baseline scan 3D image is displayed and/or used as feedback for gradually driving the needle towards the target.
 \end{enumerate}
-Steps 1-5 are repeated each time the needle is further inserted during the intervention, until the tip localization shows the desired target structure in the patient's anatomy is reached. Optionally, full CT scans for image reconstruction can be acquired during the procedure as needed. Our method uses the same sparse projection sampling pattern both for registration and for needle localization, avoiding additional scanning and image reconstruction so the radiation dose is a fraction of that required in image based methods. This allows frequent needle insertion and localization for feedback and accuracy without excessive radiation dose.
+Steps 1-5 are repeated each time the needle is gradually inserted during the intervention, until the tip localization shows the desired target structure in the patient's anatomy is reached. Optionally, full CT scans for image reconstruction can be acquired during the procedure as needed. Our method uses the same sparse projection sampling pattern both for registration and for needle localization, thereby avoiding additional scanning and image reconstruction. In this case, the radiation dose is a fraction of that required in image based methods. This allows frequent needle insertion and localization for feedback and accuracy without excessive radiation dose.
 
 The rest of this section is organized as follows.
 Section \ref{markerloc} summarizes the step for localizing the spherical marker in 3D space.
-Section \ref{inctracing} provides a detailed breakdown of the incremental 3D curve tracing algorithm.
+Section \ref{inctracing} provides a detailed description of the incremental 3D curve tracing algorithm.
 
 \subsection{Marker localization} \label{markerloc}
 The 3D center of the spherical marker is localized in three stages:
 \begin{enumerate}
     \item 
     {
-    The 2D centers of the projected spherical marker are roughly localized in each of the $K$ projection difference images by correlating the difference projection image with a circular pattern. 
+    The 2D centers of the projected spherical marker are approximately localized in each of the $K$ projection difference images by correlating the difference projection image with a circular pattern. 
     }
     \item 
     {
-    The 2D projected marker center in each projection difference image is refined by optimizing a cost function which takes into account the image gradients of the marker's surface:
+    The location of the 2D projected marker center in each projection difference image is refined by optimizing a cost function that  takes into account the image gradients of the marker's surface:
     \begin{equation}
         c_j = \argmin_{c \in \rm I\!R^2}{
         \iint_{\lvert \, \lvert\lvert x-c \rvert\rvert - R \rvert < \epsilon}
@@ -202,7 +198,7 @@ The 3D center of the spherical marker is localized in three stages:
     }
     \item
     {
-    the 3D position of the marker center is calculated by solving an inverse problem using the known projection geometry of the CT and the localized marker centers, given as transformation matrices $P_j$. The set of projection equations $\{P_j s = c_j\}_{j=1}^K$ is solved to find the 3D marker center $s$.
+    The 3D location of the marker center is computed by solving an inverse problem using the known projection geometry of the CT and the localized marker centers described by transformation matrices $P_j$. The solution of the set of projection equations $\{P_j s = c_j\}_{j=1}^K$  yields the 3D marker center location $s$.
     }
 \end{enumerate}
 
@@ -210,7 +206,7 @@ The 3D center of the spherical marker is localized in three stages:
 
 \subsection{Incremental trajectory tracing} \label{inctracing}
 
-The trajectory of the needle in 3D space is estimated by incrementally establishing a series of equidistant landmark points along the trajectory of the needle in 3D space $p_1, p_2, ..., p_i$. These landmark points are then fitted with a cubic B\'ezier curve $C_i$ tracing the curvilinear shape of the needle from the center of the spherical marker toward the last point $p_i$, where $i$ is the number of landmark points in the incremental process. The fit is achieved using a method by Khan \cite{khan2007approximation} to calculate a cubic B\'ezier curve in 3D space such that the squared-sum-distance of the landmark points from the curve is minimized. The sequence of landmark points is initialized with four co-linear, equidistant points starting from the marker center $p_1=s$, and with successive distance $\Gamma$ along an initial direction determined by optimization of a cost function detailed in the following paragraph. $\Gamma$ is a fixed parameter for segment length, and four is the minimal number of landmark points required to calculate a cubic B\'ezier curve. The algorithm is summarized as follows:
+The trajectory of the needle in 3D space is estimated by incrementally establishing a series of equidistant landmark points along the trajectory of the needle in 3D space $p_1, p_2, ..., p_i$. These landmark points are then fitted to cubic B\'ezier curve $C_i$  that traces the curvilinear shape of the needle from the center of the spherical marker toward the last point $p_i$, where $i$ is the number of landmark points. The points fitting to the Bezier curve is obtained with the method by Khan \cite{khan2007approximation}. The method computes the cubic B\'ezier curve in 3D space such that the squared-sum-distance of the landmark points from the curve is minimized. The sequence of landmark points is initialized with four co-linear and equidistant points starting from the marker center $p_1=s$. with successive distance $\Gamma$ along an initial direction determined by optimization of a cost function detailed in the following paragraph. The  parameter  $\Gamma$ is a fixed parameter for segment length. The minimal number of landmark points required to calculate a cubic B\'ezier curve is four. 
 
 %\begin{enumerate}
  %\item Starting from the center of the spherical marker, the initial direction of the first needle segment is determined in 3D space using its 2D projections onto the projection difference images, by optimizing a cost function which is designed to attain a minimum when the projection difference images contain line segment in the projected direction. Four control points are placed at regular intervals along the initial segment.
@@ -238,6 +234,7 @@ The trajectory of the needle in 3D space is estimated by incrementally establish
 \end{algorithmic}
 \end{algorithm}
 
+Table 1 presents the algorithm. 
 In each iteration a new point $p_{i+1}(\hat{n}) = p_i + \Gamma \hat{n}$ is sought and $\hat{n}$ is a direction to be determined via optimization of a cost function detailed below.
 A 3D curve $C_{i+1}[\hat{n}]$ is fitted to the landmark points $p_1, p_2, ..., p_i, p_{i+1}(\hat{n})$, and projected onto each of the $K$ view angles projection difference images to obtain projected curves $P_j C_{i+1}[\hat{n}] = c_{i+1}^j[\hat{n}]$ where $j=1,...,K$ is the view angle index and $P_j$ is the projection operator for view $j$.
 The direction $\hat{n}$ is obtained by optimizing a cost function designed to attain a minimum when the projection of the curve $C_{i+1}$ onto the set of projection difference images follows the needle trajectory traced in the images:
@@ -334,7 +331,7 @@ The main advantages of our method are:
 5) only a simple marker attached to the needle is required; 
 6) artifact-free monitoring of a flexible needle's trajectory on top of a baseline scan.
 
-In a limited phantom study performed in cooperation with a leading CT manufacturer, an accuracy level comparable to 3D image space methods is shown in our experimental results.
+In a limited phantom study performed in cooperation with a leading CT manufacturer, an accuracy level comparable to 3D image space methods is shown.
 The dose reduction enabled by our method allows either more frequent tip localizations during needle insertion for a similar total dose, or a reduced total dose for the same frequency of tip localization - a reduction of $\times$10-25, based on the fraction of views used from the repeat scan.
 
 
